--- a/Portfolio.html
+++ b/Portfolio.html
@@ -30,7 +30,7 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#resume">Resume</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="#labs">Lab Challenges</a></li>
+          <li><a href="#labs">Project Challenges</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="mobile-menu">
@@ -200,7 +200,7 @@
 
     <!-- Projects Section -->
     <section id="projects" class="section">
-      <h2>Lab Challenges</h2>
+      <h2>Projects</h2>
       <div class="projects-grid">
         <div class="project-card fade-in">
           <div class="project-img">
